# Triangle_Counting

./: CMakeLists.txt  Makefile
data/: Makefile  edge.txt
data/datasets/dimacs10/: Makefile.inc  make_edge_list.cpp
src/: CMakeLists.txt
src/simple_graph_io/: CMakeLists.txt  edge_io.cpp  edge_io.h  edge_io_edge_array.cpp  ext_graph_types.h  ext_types_adj_list.cpp
src/simple_graph_io_cuda/: CMakeLists.txt  edge_array_device.cu  edge_array_managed.cu  edge_io_cuda.h
src/simple_graph_reorder/: CMakeLists.txt  main_reorder.cpp  reorder.cpp  reorder.h
src/triangle_counting/: CMakeLists.txt  main_tc.cpp  main_tc_cuda.cpp  tc.cpp  tc.h  tc_cuda_dual.cu  tc_cuda_naive.cu
src/utility/: CMakeLists.txt  timer.cpp  timer.h
unit_test/: Makefile  Makefile.base
unit_test/edge_array/: Makefile  text2array.cpp
unit_test/edge_list_io/: Makefile  bin2text.cpp  text2bin.cpp
